--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="./favicon.png">
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>
-        Focus Med
+        <%= htmlWebpackPlugin.options.title %>
     </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&family=Rubik:wght@600&display=swap" rel="stylesheet">
 </head>
 
 <body>
