--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" class="view-in" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="./favicon.png">
     <title>
-        FOCUMED
+        FOCUMED | Лабораторное оборудование
     </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,10 +15,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
+    <meta name="google-site-verification" content="avLvi8kocs3CKawN9l70LRWqPXMpjfx-FC65BavJXbI" />
+    <meta name="description" content="Лабораторное оборудование, Реагенты и Расходные материалы для лаборатории">
+    <meta name="keywords" content="Лабораторное оборудование в Ташкенте, Реагенты в Ташкенте, Расходные материалы для лаборатории в Ташкенте, focusmed, focusmed.uz,
+    Биохимические анализаторы в Ташкенте, Гематологические анализаторы в Ташкенте, ПЦР лаборатория в Ташкенте, ЛАБОРАТОРНОЕ ОБОРУДОВАНИЕ, РЕАГЕНТЫ, РАСХОДНЫЕ МАТЕРИАЛЫ
+    ">
+    <link rel="canonical" href="https://focusmed.uz/" />
     <script src="/path/to/jquery.min.js"></script>
     <script src="/path/to/jquery.waypoints.js"></script>
     <script src="jquery.rcounterup.js"></script>
-
+    <meta name="rating" content="general">
 
 </head>
 
