adding changes for fixing bugs

--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" class="view-in" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="./favicon.png">
-    <title>
-        FOCUMED | Лабораторное оборудование
-    </title>
+    <title> FOCUSMED | Лабораторное оборудование и приборы</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&family=Rubik:wght@600&display=swap" rel="stylesheet">
@@ -16,10 +14,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
     <meta name="google-site-verification" content="avLvi8kocs3CKawN9l70LRWqPXMpjfx-FC65BavJXbI" />
-    <meta name="description" content="Лабораторное оборудование, Реагенты и Расходные материалы для лаборатории">
-    <meta name="keywords" content="Лабораторное оборудование в Ташкенте, Реагенты в Ташкенте, Расходные материалы для лаборатории в Ташкенте, focusmed, focusmed.uz,
-    Биохимические анализаторы в Ташкенте, Гематологические анализаторы в Ташкенте, ПЦР лаборатория в Ташкенте, ЛАБОРАТОРНОЕ ОБОРУДОВАНИЕ, РЕАГЕНТЫ, РАСХОДНЫЕ МАТЕРИАЛЫ
-    ">
+    <meta name="description" content="Лабораторное оборудованиеи и приборы в Ташкенте, Реагенты и Расходные материалы для лаборатории">
+    <meta name="keywords" content="Лабораторное оборудование и приборы в Ташкенте, Реагенты в Ташкенте,focusmed, focusmed.uz, Биохимические анализаторы в Ташкенте, Гематологические анализаторы в Ташкенте, ПЦР лаборатория в Ташкенте, Лабораторное оборудование и приборы, РЕАГЕНТЫ, расходные материалы в Ташкенте, расходные материалы для лаборатории в ташкенте">
     <link rel="canonical" href="https://focusmed.uz/" />
     <script src="/path/to/jquery.min.js"></script>
     <script src="/path/to/jquery.waypoints.js"></script>
